# shelf

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vite.config.js
.github/workflows/: test.yml
api/: config.py  conftest.py  main.py  models.py  pytest.ini  requirements.txt  schemas.py  setup_user.py  test_api.py  test_integration.py
api/routes/: auth.py  deadlines.py  transfers.py
design/: generate-shelf-favicon.js  generate-shelf-logo.js
e2e/: delete-transfer.spec.ts  edit-transfer.spec.ts  file-upload.spec.ts  helpers.ts  login-failure.spec.ts  text-transfer.spec.ts
scripts/: __init__.py  adduser.py  clean.py  help.py  install.py  start.py  stop.py  test.py  utils.py
src/: index.css  test-setup.ts
src/components/: AccessPage.test.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  DeleteButton.test.tsx  DeleteButton.tsx  DownloadButton.test.tsx  DownloadButton.tsx  Hero.tsx  InfoButton.test.tsx  InfoButton.tsx  LogoSpinner.tsx  LogoutButton.test.tsx  PasteButton.test.tsx  PasteButton.tsx  SendButton.test.tsx  TextInput.test.tsx  TextInput.tsx  Toast.test.tsx  Toast.tsx  TransferBar.test.tsx  TransferBar.tsx  TransferGrid.test.tsx  TransferGrid.tsx  TransferItem.test.tsx  TransferItem.tsx  UploadButton.test.tsx  UploadButton.tsx
src/pages/: AccessPage.tsx  HelpPage.tsx  TransferPage.tsx
src/stores/: AuthStore.test.ts  ToastStore.test.ts  TransferStore.test.ts  TransferStore.ts
